RelativeLayout reemplazado por ConstraintLayout

--- a/app/src/main/res/layout/add_account.xml
+++ b/app/src/main/res/layout/add_account.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:padding="10dp"
     android:background="@drawable/bckgrnd_account_options">
 
@@ -16,7 +18,6 @@
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:ems="10"
-            android:hint="Usuario ó email"
             android:textSize="20sp"
             android:enabled="false"
             android:textColor="@color/negro"
@@ -41,7 +42,7 @@
             android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
             android:ems="10"
-            android:hint="Contraseña"
+            android:hint="@string/contrase_a"
             android:inputType="textPassword|text"
             android:singleLine="true"
             android:textColor="@color/negro"
@@ -61,7 +62,7 @@
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:ems="10"
-            android:hint="Tipo de cuenta"
+            android:hint="@string/tipo_de_cuenta"
             android:textSize="20sp"
             android:textColor="@color/negro"
             android:layout_gravity="center"
@@ -73,7 +74,7 @@
         android:id="@+id/addacc_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" Agregar "
+        android:text="@string/agregar"
         android:textAllCaps="false"
         android:textColor="@color/txt_pressed_account_style"
         android:textSize="30sp"
