--- a/app/src/main/res/layout/show_emails.xml
+++ b/app/src/main/res/layout/show_emails.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -29,12 +30,13 @@
         android:layout_height="wrap_content"
         android:src="@drawable/noemail"
         android:padding="10dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@string/app_name" />
     <TextView
         android:id="@+id/textNoEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="No hay emails agregados"
+        android:text="@string/no_hay_emails_agregados"
         android:textColor="@color/grisClaro"
         android:layout_below="@id/imgNoEmail"
         android:textSize="25sp"
@@ -48,10 +50,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="50dp"
         android:layout_marginEnd="30dp"
         android:padding="10dp"
         app:elevation="5dp"
         app:backgroundTint="@color/azulCielo"
-        app:srcCompat="@drawable/addmail"/>
+        app:srcCompat="@drawable/addmail"
+        android:contentDescription="@string/app_name" />
 </RelativeLayout>
