--- a/app/src/main/res/layout/edit_usuario.xml
+++ b/app/src/main/res/layout/edit_usuario.xml
@@ -1,70 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:padding="16dp"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="16dp"
     android:background="@drawable/opc_usuario">
 
     <ImageView
         android:id="@+id/imgthink"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:src="@drawable/thinkmoji"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"
         android:contentDescription="@string/app_name"
-        android:layout_centerHorizontal="true"/>
+        android:src="@drawable/thinkmoji"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <ImageView
         android:id="@+id/edituser_help"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:contentDescription="@string/app_name"
         android:src="@drawable/baseline_help_black_18dp"
-        android:layout_alignParentEnd="true"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtrecuperar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cambiar"
+        android:layout_below="@id/imgthink"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center"
+        android:text="@string/cambiar"
         android:textColor="@color/negro"
         android:textSize="25sp"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:layout_below="@id/imgthink"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgthink" />
 
     <LinearLayout
         android:id="@+id/linearradio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_below="@id/txtrecuperar"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtrecuperar">
 
         <TextView
             android:id="@+id/edituser_radiopss"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Contraseña"
+            android:text="@string/contrase_a"
             android:textAlignment="textStart"
-            android:textSize="17sp"
-            android:textColor="@color/negro"/>
+            android:textColor="@color/negro"
+            android:textSize="17sp" />
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/edituser_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:checked="false"/>
+            android:checked="false" />
 
         <TextView
             android:id="@+id/edituser_radiokey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Palabra secreta"
+            android:text="@string/palabra_secreta"
             android:textAlignment="textEnd"
-            android:textSize="17sp"
-            android:textColor="@color/negro"/>
+            android:textColor="@color/negro"
+            android:textSize="17sp" />
 
     </LinearLayout>
 
@@ -73,18 +93,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/linearradio"
-        android:paddingTop="20dp">
+        android:paddingTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearradio">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edituser_username"
             android:layout_width="300dp"
             android:layout_height="50dp"
-            android:ems="10"
-            android:textColorHint="@color/negro"
-            android:textSize="20sp"
-            android:textColor="@color/blanco"
             android:layout_gravity="center"
+            android:ems="10"
+            android:inputType="textVisiblePassword"
             android:singleLine="true"
-            android:inputType="textVisiblePassword"/>
+            android:textColor="@color/blanco"
+            android:textColorHint="@color/negro"
+            android:textSize="20sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -92,19 +116,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/edituser_element1"
-        app:passwordToggleTint="@color/rosa"
-        app:passwordToggleEnabled="true">
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edituser_element1"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/rosa">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edituser_credencial"
             android:layout_width="300dp"
             android:layout_height="50dp"
-            android:ems="10"
-            android:textColorHint="@color/negro"
-            android:textSize="20sp"
-            android:textColor="@color/blanco"
             android:layout_gravity="center"
+            android:ems="10"
+            android:inputType="textPassword"
             android:singleLine="true"
-            android:inputType="textPassword"/>
+            android:textColor="@color/blanco"
+            android:textColorHint="@color/negro"
+            android:textSize="20sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -112,19 +141,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/edituser_element2"
-        app:passwordToggleTint="@color/rosa"
-        app:passwordToggleEnabled="true">
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edituser_element2"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/rosa">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edituser_new_credencial"
             android:layout_width="300dp"
             android:layout_height="50dp"
-            android:ems="10"
-            android:textColorHint="@color/negro"
-            android:textSize="20sp"
-            android:textColor="@color/blanco"
             android:layout_gravity="center"
+            android:ems="10"
+            android:inputType="textPassword"
             android:singleLine="true"
-            android:inputType="textPassword"/>
+            android:textColor="@color/blanco"
+            android:textColorHint="@color/negro"
+            android:textSize="20sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -132,41 +166,59 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/edituser_element3"
-        app:passwordToggleTint="@color/rosa"
-        app:passwordToggleEnabled="true">
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edituser_element3"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/rosa">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edituser_confirmar_new_credencial"
             android:layout_width="300dp"
             android:layout_height="50dp"
-            android:ems="10"
-            android:textColorHint="@color/negro"
-            android:textSize="20sp"
-            android:textColor="@color/blanco"
             android:layout_gravity="center"
+            android:ems="10"
+            android:inputType="textPassword"
             android:singleLine="true"
-            android:inputType="textPassword"/>
+            android:textColor="@color/blanco"
+            android:textColorHint="@color/negro"
+            android:textSize="20sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <ImageView
         android:id="@+id/edituser_back"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/arrow_back_24px"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/btn_goto_style"/>
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="330dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/btn_goto_style"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/arrow_back_24px"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edituser_btnActualizar" />
 
     <Button
         android:id="@+id/edituser_btnActualizar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" Actualizar "
+        android:layout_below="@id/edituser_element4"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="80dp"
+        android:background="@drawable/btn_user_style"
+        android:elevation="5dp"
+        android:text="@string/actualizar"
         android:textAllCaps="false"
         android:textColor="@color/txt_pressed_user_style"
         android:textSize="30sp"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/btn_user_style"
-        android:layout_centerHorizontal="true"
-        android:elevation="5dp"
-        android:layout_below="@id/edituser_element4"/>
-</RelativeLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edituser_element4" />
+</androidx.constraintlayout.widget.ConstraintLayout>
