--- a/app/src/main/res/layout/intro_2_quees.xml
+++ b/app/src/main/res/layout/intro_2_quees.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,59 +9,68 @@
         android:id="@+id/quees_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="160dp"
+        android:gravity="center"
         android:text="@string/quees_txt1"
         android:textColor="@color/blanco"
         android:textSize="40sp"
-        android:layout_marginTop="200dp"
-        android:gravity="center"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/quees_txt1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/quees_title"
+        android:layout_marginTop="28dp"
+        android:gravity="center"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:text="@string/quees_txt2"
         android:textColor="@color/blanco"
         android:textSize="23sp"
-        android:gravity="center"
-        android:layout_marginTop="50dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:layout_below="@id/quees_title"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/quees_title" />
 
     <Button
         android:id="@+id/intro_quees_previous"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/btn_previous_style"
+        android:elevation="5dp"
         android:text="@string/retroceder"
         android:textAllCaps="false"
         android:textColor="@color/txt_pressed_user_style"
-        android:background="@drawable/btn_previous_style"
-        android:elevation="5dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@id/separacion"
-        android:layout_marginBottom="40dp"
-        android:layout_marginEnd="50dp"/>
-
-    <TextView
-        android:id="@+id/separacion"
-        android:layout_width="50dp"
-        android:layout_height="5dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/negro" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/intro_quees_next"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/quees_txt1"
+        app:layout_constraintVertical_bias="0.5" />
 
     <Button
         android:id="@+id/intro_quees_next"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="60dp"
+        android:background="@drawable/btn_next_style"
+        android:elevation="5dp"
         android:text="@string/avanzar"
         android:textAllCaps="false"
         android:textColor="@color/txt_pressed_user_style"
-        android:background="@drawable/btn_next_style"
-        android:elevation="5dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@id/separacion"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="40dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/quees_txt1"
+        app:layout_constraintVertical_bias="0.5" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
