--- a/app/src/main/res/layout/intro_5_funcion_c.xml
+++ b/app/src/main/res/layout/intro_5_funcion_c.xml
@@ -1,84 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-    android:id="@+id/funcionc_txt2"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/funcionc_txt1"
-    android:textColor="@color/blanco"
-    android:textSize="23sp"
-    android:gravity="start"
-    android:layout_marginTop="15dp"
-    android:paddingStart="10dp"
-    android:paddingEnd="10dp"/>
+        android:id="@+id/funcionc_txt2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="start"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:text="@string/funcionc_txt1"
+        android:textColor="@color/blanco"
+        android:textSize="23sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/funcionc_img1"
         android:layout_width="wrap_content"
-        android:layout_height="220dp"
+        android:layout_height="130dp"
+        android:layout_below="@id/funcionc_txt2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:contentDescription="@string/app_name"
         android:src="@drawable/edsa_tutorial_5"
-        android:layout_below="@id/funcionc_txt2"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/funcionc_txt2" />
 
     <TextView
         android:id="@+id/funcionc_txt3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/funcionc_img1"
+        android:layout_marginTop="15dp"
+        android:gravity="start"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:text="@string/funcionc_txt2"
         android:textColor="@color/blanco"
         android:textSize="23sp"
-        android:gravity="start"
-        android:layout_marginTop="15dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:layout_below="@id/funcionc_img1"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/funcionc_img1" />
 
     <ImageView
         android:id="@+id/funcionc_img2"
         android:layout_width="250dp"
-        android:layout_height="200dp"
+        android:layout_height="130dp"
+        android:layout_below="@id/funcionc_txt3"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+        android:contentDescription="@string/app_name"
         android:src="@drawable/edsa_tutorial_6"
-        android:layout_below="@id/funcionc_txt3"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/funcionc_txt3" />
 
     <Button
         android:id="@+id/funcionc_previous"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="69dp"
+        android:background="@drawable/btn_previous_style"
+        android:elevation="5dp"
         android:text="@string/retroceder"
         android:textAllCaps="false"
         android:textColor="@color/txt_pressed_user_style"
-        android:background="@drawable/btn_previous_style"
-        android:elevation="5dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@id/separacion"
-        android:layout_marginBottom="40dp"
-        android:layout_marginEnd="50dp"/>
-
-    <TextView
-        android:id="@+id/separacion"
-        android:layout_width="50dp"
-        android:layout_height="5dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/negro" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/funcionc_img2" />
 
     <Button
         android:id="@+id/funcionc_next"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="69dp"
+        android:background="@drawable/btn_next_style"
+        android:elevation="5dp"
         android:text="@string/avanzar"
         android:textAllCaps="false"
         android:textColor="@color/txt_pressed_user_style"
-        android:background="@drawable/btn_next_style"
-        android:elevation="5dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@id/separacion"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="40dp"/>
-</RelativeLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/funcionc_img2" />
+</androidx.constraintlayout.widget.ConstraintLayout>
