--- a/app/src/main/res/layout/show_accounts.xml
+++ b/app/src/main/res/layout/show_accounts.xml
@@ -1,48 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/account_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/azulCSuave"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:title="Cuentas"
-        app:titleTextColor="@color/negro"/>
+        app:titleTextColor="@color/negro" />
+
     <ImageView
         android:id="@+id/imgNoAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/noaccount"
         android:layout_below="@id/account_toolbar"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/noaccount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/account_toolbar" />
+
     <TextView
         android:id="@+id/txtNoAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="No hay cuentas agregadas"
-        android:textColor="@color/grisClaro"
         android:layout_below="@id/imgNoAccount"
-        android:textSize="25sp"
         android:gravity="center"
-        android:layout_marginBottom="20dp"/>
+        android:text="@string/no_hay_cuentas_agregadas"
+        android:textColor="@color/grisClaro"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgNoAccount" />
+
     <ListView
         android:id="@+id/accounts_lista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/account_toolbar"/>
+        android:layout_below="@id/account_toolbar"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/account_toolbar" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/account_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="25dp"
-        app:elevation="5dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="300dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="10dp"
+        android:contentDescription="@string/app_name"
         app:backgroundTint="@color/aguamarina"
-        app:srcCompat="@drawable/baseline_create_new_folder_black_18dp"/>
-</RelativeLayout>
+        app:elevation="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtNoAccount"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/baseline_create_new_folder_black_18dp" />
+</androidx.constraintlayout.widget.ConstraintLayout>
