--- a/app/src/main/res/layout/support_user.xml
+++ b/app/src/main/res/layout/support_user.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="10dp">
 
     <RelativeLayout
@@ -18,7 +18,7 @@
             android:textStyle="bold"
             android:background="@color/azulCielo"
             android:layout_alignParentStart="true"
-            android:text=" Nombre de Usuario "/>
+            android:text="@string/nombre_de_usuario"/>
 
         <TextView
             android:id="@+id/support2"
@@ -44,7 +44,7 @@
             android:background="@color/azulCielo"
             android:layout_below="@id/support2"
             android:layout_alignParentStart="true"
-            android:text=" Contraseña "/>
+            android:text="@string/contrase_a"/>
 
         <TextView
             android:id="@+id/support4"
@@ -71,7 +71,7 @@
             android:layout_below="@id/support4"
             android:background="@color/azulCielo"
             android:layout_alignParentStart="true"
-            android:text=" Palabra secreta "/>
+            android:text="@string/palabra_secreta"/>
 
         <TextView
             android:id="@+id/support6"
