--- a/app/src/main/res/layout/show_accounts.xml
+++ b/app/src/main/res/layout/show_accounts.xml
@@ -44,6 +44,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgNoAccount" />
 
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adview3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="440dp"
+        app:adSize="BANNER"
+        app:adUnitId="ca-app-pub-8133052963274724~8703737904"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ListView
         android:id="@+id/accounts_lista"
         android:layout_width="wrap_content"
